--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@
         footer {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             margin-top: 40px;
         }
         .footer-links {
